@@ -1,6 +1,7 @@
 package br.unitins.topicos1.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import br.unitins.topicos1.dto.fabricante.FabricanteDTO;
 import br.unitins.topicos1.dto.fabricante.FabricanteResponseDTO;
@@ -69,9 +70,16 @@ public class FabricanteServiceImpl implements FabricanteService {
     }
 
     @Override
-    public List<FabricanteResponseDTO> findByAll() {
-        return repository.listAll().stream()
-                .map(e -> FabricanteResponseDTO.valueOf(e)).toList();
+    public List<FabricanteResponseDTO> findByAll(int page, int pageSize) {
+        List<Fabricante> fabricantes = repository.findAll().page(page, pageSize).list();
+        
+        return fabricantes.stream()
+                .map(e -> FabricanteResponseDTO.valueOf(e)).collect(Collectors.toList());
+    }
+
+    @Override
+    public long count() {
+        return repository.count();
     }
 
 }
